--- a/style.css
+++ b/style.css
@@ -1,3 +1,93 @@
-h1 {
+/* resets---------------------------------------------------- */
+body {
+  margin: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #111111;
+  padding-bottom: 600px; /*TIRAR DAQUI DEPOIS, É APENAS PROVISORIO*/
+  font-size: 64px;
+  justify-items: center;
+}
+p,
+h1,
+ul,
+li,
+a,
+h2,
+h3 {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+/* resets------------------FIM---------------------------------- */
+.container-geral {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 0.7fr 1.3fr 1fr 1fr 1fr;
+  gap: 2em 2em;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "header header"
+    "main main"
+    "main main"
+    "main main"
+    "footer footer";
+}
+
+.header {
+  grid-area: header;
   background-color: aqua;
+  background-image: url(./img/banner-header_doram.jpg);
+  position: relative;
+}
+.logo img {
+  width: auto;
+  height: 160px;
+  /* background-color: black; */
+}
+.img-header {
+  /* background-color: blue; */
+  position: absolute;
+  width: auto;
+  height: -20%;
+  bottom: -20%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.header li a {
+  font-size: 1.6rem;
+  font-weight: 800;
+  /* margin-bottom: 0px; */
+  font-family: "Signika", sans-serif;
+  color: white;
+  padding: 6px;
+  background: #00ed00;
+}
+.nav-header {
+  /* display: grid; */
+  background-color: bisque;
+  /* align-self: end; */
+}
+.nav-header li {
+  display: flex;
+  padding: 10px;
+  /* align-items: center; */
+  /* align-self: center; */
+  /* align-content: space-around; */
+  justify-content: end;
+  /* background-color: aquamarine; */
+}
+
+.footer {
+  grid-area: footer;
+}
+
+.main {
+  grid-area: main;
 }
