--- a/style.css
+++ b/style.css
@@ -47,9 +47,16 @@ img {
   outline: 10px solid yellow;
 }
 .container-itens {
-  background-image: url(./img/banner-header_doram.jpg);
+  /* background-image: url(./img/banner-header_doram.jpg); */
   position: relative;
   outline: 1px solid red;
+}
+
+.banner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .logo img {
@@ -60,10 +67,10 @@ img {
 }
 .img-header {
   /* background-color: blue; */
-  outline: 1px solid red;
   position: absolute;
+  outline: 1px solid red;
   width: auto;
-  height: -120%;
+  height: 120%;
   bottom: -20%;
   left: 50%;
   transform: translateX(-50%);
