--- a/style.css
+++ b/style.css
@@ -1,24 +1,14 @@
 /* resets---------------------------------------------------- */
 
-html,
 body {
-  height: 100%;
-}
-body {
-  display: flex;
-  flex-direction: column;
-}
-
-/* body {
   height: 100%;
   padding: 0px;
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
   color: #111111;
-  padding-bottom: 600px; /*TIRAR DAQUI DEPOIS, É APENAS PROVISORIO
-  font-size: 64px;
-  justify-items: center;
-} */
+  padding-bottom: 600px;
+}
+
 p,
 h1,
 ul,
@@ -127,8 +117,6 @@ img {
 
 .footer p {
   outline: 1px solid red;
-  font-size: 49%;
-  padding: 1%;
   color: white;
 }
 /* .container-footer {
