--- a/style.css
+++ b/style.css
@@ -112,7 +112,11 @@ img {
   justify-content: left;
   padding: 40px;
   background-color: #181818;
-  outline: 1px solid red;
+  outline: 20px solid pink;
+  /* padding: 500px 0px 500px 0px; */
+  /*top/right/bottom/left*/
+  height: 1000px;
+  margin-bottom: -700px;
 }
 
 .footer p {
