--- a/style.css
+++ b/style.css
@@ -227,9 +227,9 @@ img {
   margin: 10px;
 }
 
-.nav:nth-child(1) {
-  /* color: white; */
-}
+/* .nav:nth-child(1) {
+  color: white;
+} */
 
 .main {
   grid-area: main;
