--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ img {
   /* padding: 500px 0px 500px 0px; */
   /*top/right/bottom/left*/
   height: 1000px;
-  margin-bottom: -700px;
+  margin-bottom: -350px;
 }
 
 .footer p {
@@ -226,6 +226,20 @@ img {
   color: white;
   font-size: 14px;
   padding-top: 18px;
+}
+.divimg {
+  display: flex;
+}
+.imgdireita {
+  display: flex;
+  padding: 60px;
+  width: 100px;
+  height: 100px;
+  border: solid 2px red;
+}
+.direitos p {
+  color: white;
+  font-size: 14px;
 }
 
 /*distanciamente dos elementos da lista do footer*/
