--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ header .container-itens .img-header {
 .nav-header {
   margin-top: 5%;
   position: relative;
+  outline: 3px solid red;
   /* display: grid; */
   /* background-color: bisque; */
   /* align-self: end; */
@@ -122,6 +123,7 @@ header .container-itens .img-header {
 .nav-header li {
   display: flex;
   padding: 10px;
+  outline: 1px solid green;
   /* align-items: center; */
   /* align-self: center; */
   /* align-content: space-around; */
