--- a/style.css
+++ b/style.css
@@ -111,6 +111,15 @@ header .container-itens .img-header {
   background: #00ed00;
   /* margin-top: 10%; */
 }
+
+/*DIV QUE SEGURA TODOS DA LISTA*/
+.lista-menu {
+  display: flex;
+  /* outline: 3px solid red; */
+  justify-content: end;
+  width: 96%;
+}
+/*É A UL DA LISTA*/
 .nav-header {
   margin-top: 5%;
   position: relative;
@@ -123,12 +132,13 @@ header .container-itens .img-header {
 .nav-header li {
   display: flex;
   padding: 10px;
+  /* width: 96%; */
+  /* margin-bottom: 10px; */
   outline: 1px solid green;
   /* align-items: center; */
   /* align-self: center; */
   /* align-content: space-around; */
   justify-content: end;
-  /* background-color: aquamarine; */
 }
 
 .footer {
