--- a/style.css
+++ b/style.css
@@ -124,26 +124,25 @@ header .container-itens .img-header {
   display: flex;
   padding: 10px;
   height: 50px;
-
   /* width: 96%; */
   /* position: relative; */
   /* width: 96%; */
   /* margin-bottom: 10px; */
   /* outline: 1px solid green; */
   justify-content: end;
-  background: #00ed00;
+  /* background: #00ed00; */
 }
 .header li a {
   width: 300px;
-  /* display: block; */
-  /* width: 100%; */
+  text-align: center;
   font-size: 1.6rem;
   font-weight: 800;
   /* margin-bottom: 0px; */
   font-family: "Signika", sans-serif;
   color: white;
   padding: 6px;
-  /* background: #00ed00; */
+  background: #00ed00;
+  border: solid 3px #fff;
   /* margin-top: 10%; */
 }
 
