margim do nav-header

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ header .container-itens .img-header {
   display: flex;
   flex-direction: column;
   /* width: 300px; */
-  margin-top: 7.9%;
+  margin-top: 90px;
   position: relative;
   /* outline: 3px solid red; */
   /* display: grid; */
