--- a/style.css
+++ b/style.css
@@ -142,7 +142,11 @@ header .container-itens .img-header {
 .nav-header li:nth-child(3) {
   margin-left: -18%;
 }
-.nav-header li:nth-child(2) {
+/* .nav-header li:nth-child(2) {
+  background-color: #111111;
+} */
+.download > a {
+  background: rgba(21, 210, 232, 0.4) !important;
 }
 
 .header li a {
