tamanho da font do download

--- a/style.css
+++ b/style.css
@@ -134,13 +134,15 @@ header .container-itens .img-header {
   /* background: #00ed00; */
   /* margin-left: -20%; */
 }
-/* .download {
-  font-size: 1px;
-} */
 
 .nav-header li:nth-child(2) {
   margin-left: -13.5%;
 }
+.download:nth-child(2) a {
+  font-size: 1.2rem;
+  /* align-self: center; */
+}
+
 .nav-header li:nth-child(3) {
   margin-left: -18%;
 }
@@ -150,6 +152,7 @@ header .container-itens .img-header {
 }
 .download > a {
   background: rgba(21, 210, 232, 0.4) !important;
+  font-size: 10px;
 }
 
 .header li a {
