criado o css do header e importado

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
+@import "./header.css";
 /* resets---------------------------------------------------- */
-
 body {
   height: 100%;
   padding: 0px;
@@ -46,156 +46,6 @@ main img {
     "main main"
     "main main"
     "footer footer";
-}
-
-.header {
-  /* display: flex;
-  flex-wrap: wrap; */
-  grid-area: header;
-  /* background-color: aqua; */
-  /* position: relative; */
-  outline: 10px solid red;
-  /* background-image: url(./img/banner-header_doram.jpg); */
-}
-.container-itens {
-  /* background-image: url(./img/banner-header_doram.jpg); */
-  /* position: relative; */
-  outline: 1px solid red;
-  height: 30vh;
-  overflow: hidden;
-  min-height: 300px; /*é o que faz o background ser visivel*/
-}
-header .container-itens {
-  position: relative;
-}
-
-header .container-itens .banner {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  outline: 3px solid red;
-}
-
-.logo img {
-  /* display: flex; */
-  width: auto;
-  height: 160px;
-  background-color: black;
-}
-header .container-itens .img-header {
-  /* background-color: blue; */
-  position: absolute;
-  outline: 1px solid blue;
-  width: auto;
-  height: -120%;
-  bottom: -22%;
-  left: 50%;
-  transform: translateX(-50%);
-  /* max-width: 50%; */
-  /* padding: 0;
-  margin: 0; */
-}
-.img-header img {
-  max-width: 735px;
-  /* outline: 1px solid blue; */
-}
-
-/*DIV QUE SEGURA TODOS DA LISTA*/
-.lista-menu {
-  display: flex;
-  justify-content: end;
-  /* width: 96%; */
-}
-/*É A UL DA LISTA*/
-.nav-header {
-  display: flex;
-  flex-direction: column;
-  /* width: 300px; */
-  margin-top: 90px;
-  position: relative;
-  /* outline: 3px solid red; */
-  /* display: grid; */
-  /* background-color: bisque; */
-  /* align-self: end; */
-}
-/*fala com cada item de li*/
-.nav-header li {
-  display: flex;
-  padding: 5px;
-  height: 50px;
-  margin-left: -9%;
-  /* position: relative; */
-}
-
-.nav-header li:nth-child(2) {
-  margin-left: -13.5%;
-}
-
-.migre-conta a {
-  background: #00ed00;
-  position: relative;
-}
-
-/*ALGO ESTÁ DISTORCENDO MINHAS LETRAS E TUDO DENTRO DO QUADRADINHO, VER O QUE É!*/
-.migre-conta a::after {
-  content: "";
-  position: absolute;
-  display: block;
-  top: -3px;
-  right: 15px;
-  background: url(./img/alert.png);
-  background-size: 100%;
-  width: 20px;
-  height: 20px;
-}
-
-.download span {
-  font-size: 1.2rem;
-  /* align-self: center; */
-  /* text-align: center; */
-  /* margin-top: 20px; */
-}
-.compre span {
-  font-size: 1.4rem;
-}
-.compre a {
-  background: #00ff71 !important;
-}
-
-.nav-header li:nth-child(3) {
-  margin-left: -18%;
-}
-
-.compre a:hover {
-  background-color: #01ffff !important;
-}
-.download > a {
-  background: rgba(21, 210, 232, 0.4);
-  /* outline: 1px solid red; */
-  /* align-self: center; */
-}
-
-.header li a {
-  width: 270px; /*largura do box verde <a>*/
-  text-align: center;
-  font-size: 1.6rem;
-  font-weight: 800;
-  /* box-sizing: border-box; */
-  /* margin-bottom: 0px; */
-  transform: skewX(-10deg); /*dá o efeito da borda diagonal*/
-  font-family: "Signika", sans-serif;
-  color: white;
-  padding: 6px;
-  /* background: #00ed00; */
-  border: solid 3px #fff;
-  /* margin-top: 10%; */
-}
-.header li a:hover {
-  background-color: #01b7fd;
-}
-.download a:hover {
-  background-color: #01b7fd !important ;
 }
 
 /*---------------------------------------------------------------*/
