--- a/global/header.css
+++ b/global/header.css
@@ -111,6 +111,7 @@ header .container-itens .banner {
 /* margin: 0; */
 /* } */
 /*OBS: O QUE DEIXA MEU LOGO GRUDADO NO BANNER DE PATINHA É O POSITION: ABSOLUTE E O LEFT: 50%*/
+
 .marca-rag img {
   outline: 1px solid blue;
   position: absolute;
@@ -120,6 +121,16 @@ header .container-itens .banner {
   /* margin-left: -762px; */
   max-width: 258px;
   /* width: auto; */
+}
+.marca-rag {
+  /* position: absolute; */
+}
+.marca-rag span {
+  position: absolute;
+  outline: 1px solid blue;
+  left: 40%;
+  bottom: 13.5%;
+  margin-left: -30%;
 }
 
 .download span {
