--- a/global/header.css
+++ b/global/header.css
@@ -112,6 +112,16 @@ header .container-itens .banner {
 /* } */
 /*OBS: O QUE DEIXA MEU LOGO GRUDADO NO BANNER DE PATINHA É O POSITION: ABSOLUTE E O LEFT: 50%*/
 
+/* .marca-rag img::after {
+  display: block;
+  color: #00ed00;
+  position: absolute;
+  content: "teste";
+  width: 80px;
+  height: 150px;
+
+} */
+
 .marca-rag img {
   outline: 1px solid blue;
   position: absolute;
@@ -122,15 +132,21 @@ header .container-itens .banner {
   max-width: 258px;
   /* width: auto; */
 }
-.marca-rag {
-  /* position: absolute; */
-}
+
+/*por enquanto comentei ele no html, tentar criar ele denovo com z-index*/
 .marca-rag span {
-  position: absolute;
-  outline: 1px solid blue;
+  /* display: block; */
+  position: relative;
+  outline: 1px solid purple;
   left: 40%;
-  bottom: 13.5%;
+  bottom: 15.5%;
   margin-left: -30%;
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  /* margin-bottom: 5px; */
+  color: #15d2e8;
+  margin-top: 165px;
+  max-width: 200px;
 }
 
 .download span {
