--- a/global/header.css
+++ b/global/header.css
@@ -122,6 +122,14 @@ header .container-itens .banner {
 
 } */
 
+.marca-rag {
+  /* display: block; */
+  /* padding: 1px 1px 1px 1px; */
+  /* max-width: 10%; */
+  /* margin: 10px 10px 10px 10px; */
+  /* max-width: 80px; */
+}
+
 .marca-rag img {
   outline: 1px solid blue;
   position: absolute;
@@ -135,13 +143,13 @@ header .container-itens .banner {
 
 /*por enquanto comentei ele no html, tentar criar ele denovo com z-index*/
 .marca-rag span {
-  /* display: block; */
+  display: inline-block;
   position: relative;
   outline: 1px solid purple;
   left: 40%;
-  bottom: 15.5%;
+  /* bottom: 15.5%; */
   margin-left: -30%;
-  padding: 10px 20px;
+  /* padding: 10px 20px; */
   font-size: 1.2rem;
   /* margin-bottom: 5px; */
   color: #15d2e8;
