--- a/global/header.css
+++ b/global/header.css
@@ -150,7 +150,7 @@ header .container-itens .banner {
   /* padding: 10px 20px; */
   margin-bottom: 5px;
   transform: translate(-80%);
-  /* bottom: -80px; */
+  bottom: -50px;
 }
 
 /*por enquanto comentei ele no html, tentar criar ele denovo com z-index*/
